--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start:dev": "env-cmd -f ./enviroments/.env.development react-scripts start",
     "start:prod": "env-cmd -f ./enviroments/.env.production react-scripts start",
-    "build": "react-scripts build",
+    "build": "env-cmd -f ./enviroments/.env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
